src/test/deca/context/invalid/too_many_argument.deca
//ERROR :9
class A{
void meth(int b){
    print(a+b);
    }
}
{
A barce = new A();
A.meth(3,4);
}